--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_restapi
+spring.datasource.username=springuser
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
 
+## JPA
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
+#spring.jpa.show-sql=false
+#spring.jpa.open-in-view=false
+#spring.jpa.properties.hibernate.dialect.storage_engine=innodb
