--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_restapi
 spring.datasource.username=springuser
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.show-sql: true
 
 ## JPA
 #spring.jpa.hibernate.ddl-auto=update
@@ -12,3 +11,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.show-sql=false
 #spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+
+## Spring Security
+#security.basic.enabled=false
+#security.enable.csrf=false
+spring.security.user.name=user
+spring.security.user.password=oriolcesar
