--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+## MYSQL --- --- --- --- --- --- --- --- --- --- ---
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_restapi
 spring.datasource.username=springuser
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-## JPA
+## JPA --- --- --- --- --- --- --- --- --- --- ---
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
@@ -12,8 +13,17 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
-## Spring Security
+## SPRING SECURITY --- --- --- --- --- --- --- --- --- --- ---
 #security.basic.enabled=false
 #security.enable.csrf=false
 spring.security.user.name=user
 spring.security.user.password=oriolcesar
+
+## IMAGE/FILE UPLOAD --- --- --- --- --- --- --- --- --- --- ---
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=/uploads
