--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=/java/realstate_api/src/main/resources/static/images
+
+## JWT AUTHENTICATION --- --- --- --- --- --- --- --- --- --- ---
+jwt.secret=example123
