added Password Encoding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #security.enable.csrf=false
 spring.security.user.name=user
 spring.security.user.password=oriolcesar
+spring.main.allow-bean-definition-overriding=true
+
 
 ## IMAGE/FILE UPLOAD --- --- --- --- --- --- --- --- --- --- ---
 spring.servlet.multipart.enabled=true
