--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## MYSQL --- --- --- --- --- --- --- --- --- --- ---
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_restapi
 spring.datasource.username=springuser
 spring.datasource.password=12345678
