--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ## JPA --- --- --- --- --- --- --- --- --- --- ---
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
 #spring.jpa.show-sql=false
@@ -15,19 +15,19 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ## SPRING SECURITY --- --- --- --- --- --- --- --- --- --- ---
 #security.basic.enabled=false
 #security.enable.csrf=false
-spring.security.user.name=user
-spring.security.user.password=oriolcesar
-spring.main.allow-bean-definition-overriding=true
+#spring.security.user.name=user
+#spring.security.user.password=oriolcesar
+#spring.main.allow-bean-definition-overriding=true
 
 
 ## IMAGE/FILE UPLOAD --- --- --- --- --- --- --- --- --- --- ---
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.file-size-threshold=2KB
-spring.servlet.multipart.max-file-size=200MB
-spring.servlet.multipart.max-request-size=215MB
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.file-size-threshold=2KB
+#spring.servlet.multipart.max-file-size=200MB
+#spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=/java/realstate_api/src/main/resources/static/images
 
 ## JWT AUTHENTICATION --- --- --- --- --- --- --- --- --- --- ---
-jwt.secret=example123
+#jwt.secret=example123
